--- a/desafio/flex-14.html
+++ b/desafio/flex-14.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flex-14</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="normal">
         <h1>Exemplo de comteudo flexivel</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, temporibus asperiores! Natus autem aliquam sapiente porro laudantium fugiat, nam totam adipisci? Nisi vel facere omnis quia optio voluptatem tenetur nobis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus repellat nobis nisi explicabo obcaecati in reprehenderit doloremque unde totam consectetur quo, itaque officia libero suscipit dicta harum ut, repellendus similique.</p>
 
@@ -17,11 +17,12 @@
         <section class="flex-content">
             <article class="media-text">
                 <div class="text">
-
+                    <h2>elemento media->text</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quisquam tenetur temporibus, excepturi doloremque quas rem at ullam sunt nihil, praesentium blanditiis inventore illum iste ab quos delectus obcaecati molestiae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis similique blanditiis debitis voluptatum quas rerum, praesentium repellat culpa, magnam ex voluptatibus vel repudiandae doloribus tenetur alias voluptas! Accusantium, dolore nihil.</p>
                 </div>
 
                 <div class="media">
-
+                    <img src="c:\Users\guihg\Downloads\pngflex.png" alt="foto">
                 </div>
 
             </article>
@@ -29,11 +30,12 @@
             <article class="text-media">
 
                 <div class="text">
-
+                    <h2>elemento text->media</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum sint impedit quasi necessitatibus possimus labore repellendus dicta ea consequuntur sit dolore pariatur voluptatum numquam, nesciunt cumque et facilis voluptates! Praesentium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus commodi, excepturi similique voluptatem culpa quam nesciunt omnis magnam in? Illo, ullam! Ullam maiores eveniet deleniti tenetur delectus quod, minima eius.</p>
                 </div>
 
                 <div class="media">
-
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/y6I4CmKshcw?si=5aETA-tbaxyHZRGz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
 
             </article>
