--- a/desafio/flex-14.html
+++ b/desafio/flex-14.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="media">
-                    <img src="c:\Users\guihg\Downloads\pngflex.png" alt="foto">
+                    <img src="pngflex.png" alt="foto">
                 </div>
 
             </article>
@@ -31,11 +31,11 @@
 
                 <div class="text">
                     <h2>elemento text->media</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum sint impedit quasi necessitatibus possimus labore repellendus dicta ea consequuntur sit dolore pariatur voluptatum numquam, nesciunt cumque et facilis voluptates! Praesentium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus commodi, excepturi similique voluptatem culpa quam nesciunt omnis magnam in? Illo, ullam! Ullam maiores eveniet deleniti tenetur delectus quod, minima eius.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum sint impedit quasi necessitatibus possimus labore repellendus dicta ea consequuntur sit dolore pariatur voluptatum numquam, nesciunt cumque et facilis voluptates! Praesentium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus commodi, excepturi similique voluptatem culpa quam nesciunt omnis magnam in? Illo, ullam! Ullam maiores eveniet deleniti tenetur delectus quod, minima eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, suscipit laborum. Reprehenderit magnam fuga accusantium sit porro natus recusandae fugiat cupiditate nostrum iste doloribus, enim architecto, ab tenetur debitis cumque.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo a ut ullam blanditiis incidunt vel explicabo, asperiores iusto sed! Mollitia magni dolore voluptate est at. Vero quisquam omnis esse. Eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem reiciendis sit magnam vel quis fugiat explicabo enim vitae ex iste reprehenderit sequi tenetur nisi, esse officia. Eligendi cum impedit quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti beatae nobis expedita placeat velit sapiente provident ratione tempora recusandae nisi architecto voluptatibus molestiae officiis nulla iusto, repellendus ullam ad ut?</p>
                 </div>
 
                 <div class="media">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/y6I4CmKshcw?si=5aETA-tbaxyHZRGz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/FTXZgr4wrF4?si=tBHgi36ROFh9XQ_e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
 
             </article>
